--- a/style.css
+++ b/style.css
@@ -14,7 +14,9 @@ body {
   font-weight: bold;
   color: white;
   position: relative;
-  background: #008080;
+  background: rgb(0,128,128);
+  background: linear-gradient(90deg, rgba(0,128,128,1) 0%, rgba(9,118,121,1) 75%, rgba(0,101,128,1) 100%);
+  ;
 }
 .container {
   max-width: 1200px;
@@ -172,13 +174,136 @@ body {
   padding: 100px 50px;
 }
 
+#about img {
+  box-shadow: 0 10px 20px rgba(0,0,0,0.1),0 6px 6px rgba(0,0,0,0.1) ;
+  border-radius: 5px;
+}
+
 #menu {
   max-width: 600px;
   padding: 100px 50px;
+}
+
+#gallery {
+  padding-top: 100px
+}
+ .thumbs {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-content: flex-start;
+  align-items: stretch;
+  width: 100%;
+  margin: 10px auto;
+  resize: both;
   
-}
+ }
+
+ 
+ .thumb {
+  position: relative;
+  display: inline-block;
+  flex: 1 0 auto;
+  width: auto;
+  height: 300px;
+  margin: 10px;
+  border-radius: 10px;
+  text-decoration: none;
+  background-color: rgba(0,0,0, 0.50);
+  box-shadow: 0 10px 20px rgba(0,0,0,0.1),0 6px 6px rgba(0,0,0,0.1) ;
+  transition: box-shadow 300ms, transform 400ms, z-index 400ms, background-position 400ms;
+  z-index: 1;
+ }
+ .thumb:hover {
+  box-shadow: 0px 0px 10px 0px rgba(0,0,0, 0.7);
+  transform: scale(1.2, 1.2);
+  z-index: 100;
+ }
+ 
+ .thumb-img > img,
+ .thumb-txt > div {
+  min-width: 300px;
+  max-width: 100px;
+ }
+ 
+ .thumb-img {
+  background-size: cover;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+ }
+ .thumb-img:hover {
+  animation-name: thumb-scroll;
+  animation-delay: 400ms;
+  animation-duration: 2.5s;
+  animation-iteration-count: infinite;
+  animation-direction: normal;
+  animation-timing-function: linear;
+  animation-fill-mode: forwards;
+ }
+ .thumb-img > img {
+  display: block;
+  height: 100%;
+  opacity: 0;
+ }
+ @keyframes thumb-scroll {
+  15%, 35% { background-position: 0% 0%; }
+  65%, 85% { background-position: 100% 100%; }
+ }
+ 
+ .thumb > div {
+  font-family: "Helvetica Neue", "Segoe UI", Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  color: #fff;
+  padding: 0px 2px;
+  overflow: hidden;
+ }
+ .thumb > div > span {
+  display: block;
+ }
+ .thumb > div > span:first-child {
+  font-weight: bold;
+ }
+ .thumb > div > span:last-child {
+  font-size: 0.8em;
+ }
+ 
+ .thumb-img > div {
+  display: block;
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  width: 100%;
+  white-space: nowrap;
+  background-color: rgba(0,0,0, 0.30);
+  opacity: 0;
+  transition: opacity 300ms;
+ }
+ .thumb-img > div > span {
+  font-size: 0.8em;
+ }
+ .thumb-img:hover > div {
+  opacity: 1;
+ }
+ 
+ .thumb-txt > div {
+  display: block;
+  width: auto;
+  height: 100%;
+ }
 
 
-#about img {
-  border-radius: 40px;
-}
+ #order {
+  background: purple;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: bottom center;
+  height:400px;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  position: relative;
+  z-index: -2;
+ }
